--- a/docs/3/modules/joinflood.yml
+++ b/docs/3/modules/joinflood.yml
@@ -45,9 +45,8 @@ chmodes:
     usable_by: Channel operators
     description: |-
       Prevents more than &lt;joins&gt; joins in the last &lt;seconds&gt; seconds.
-  example: |-
-    Prevents more than two joins in the last five seconds:
-
-    ```plaintext
-    /MODE #channel +j 2:5
-    ```
+  example:
+  - description: |-
+      Prevents more than two joins in the last five seconds
+    text: |-
+      /MODE #channel +j 2:5
