--- a/docs/3/modules/knock.yml
+++ b/docs/3/modules/knock.yml
@@ -45,9 +45,8 @@ commands:
   syntax: <channel> <reason>
   description: |-
     Requests permission to join &lt;channel&gt; with the reason specified in &lt;reason&gt;.
-  example: |-
-    Knocks on #channel with the reason "Please let me in!":
-
-    ```plaintext
-    /KNOCK #channel :Please let me in!
-    ```
+  example:
+  - description: |-
+      Knocks on #channel with the reason "Please let me in!"
+    text: |-
+      /KNOCK #channel :Please let me in!
