--- a/docs/3/modules/nokicks.yml
+++ b/docs/3/modules/nokicks.yml
@@ -22,12 +22,11 @@ extbans:
     type: Acting
     syntax: Q:<mask>
     description: Bans privileged users matching &lt;mask&gt; from using the `/KICK` command.
-  example: |-
-    Bans privileged users matching `*!*@example.com` from using the `/KICK` command:
-
-    ```plaintext
-    /MODE #channel +b Q:*!*@example.com
-    ```
+  example:
+  - description: |-
+      Bans privileged users matching `*!*@example.com` from using the `/KICK` command
+    text: |-
+      /MODE #channel +b Q:*!*@example.com
 
 special_notes: |-
   You should consider using [the mlock module](/3/modules/mlock) and the mode locking feature of your IRC services to prevent privileged users from evading this mode by unsetting it.
