--- a/docs/3/modules/nonicks.yml
+++ b/docs/3/modules/nonicks.yml
@@ -41,9 +41,8 @@ extbans:
     type: Acting
     syntax: N:<mask>
     description: Bans users matching &lt;mask&gt; from changing their nickname whilst in the channel.
-  example: |-
-    Bans users matching `*!*@example.com` from changing their nickname whilst in the channel.
-
-    ```plaintext
-    /MODE #channel +b N:*!*@example.com
-    ```
+  example:
+  - description: |-
+      Bans users matching `*!*@example.com` from changing their nickname whilst in the channel
+    text: |-
+      /MODE #channel +b N:*!*@example.com
