--- a/docs/3/modules/opermotd.yml
+++ b/docs/3/modules/opermotd.yml
@@ -59,15 +59,12 @@ commands:
   syntax: '[<server>]'
   description: |-
     Requests the server operator message of the day for &lt;server&gt;.
-  example: |-
-    Requests the server operator message of the day for the local server:
-
-    ```plaintext
-    /OPERMOTD
-    ```
-
-    Requests the server operator message of the day for irc.example.com:
-
-    ```plaintext
-    /OPERMOTD irc.example.com
-    ```
+  example:
+  - description: |-
+      Requests the server operator message of the day for the local server
+    text: |-
+      /OPERMOTD
+  - description: |-
+      Requests the server operator message of the day for irc.example.com
+    text: |-
+      /OPERMOTD irc.example.com
