--- a/docs/3/modules/sakick.yml
+++ b/docs/3/modules/sakick.yml
@@ -9,9 +9,8 @@ commands:
   syntax: <channel> <nick> [<reason>]
   description: |-
     Kicks &lt;nick&gt; from &lt;channel&gt; optionally with the reason specified in &lt;reason&gt;.
-  example: |-
-    Kicks emily from #channel:
-
-    ```plaintext
-    /SAKICK #channel emily :Your behaviour is inappropriate
-    ```
+  example:
+  - description: |-
+      Kicks emily from #channel
+    text: |-
+      /SAKICK #channel emily :Your behaviour is inappropriate
