--- a/docs/3/modules/sethost.yml
+++ b/docs/3/modules/sethost.yml
@@ -28,12 +28,11 @@ commands:
   syntax: <hostname>
   description: |-
     Changes the displayed hostname of the user to &lt;hostname&gt;.
-  example: |-
-    Changes the hostname of the user to wibble.wobble:
-
-    ```plaintext
-    /SETHOST wibble.wobble
-    ```
+  example:
+  - description: |-
+      Changes the hostname of the user to wibble.wobble
+    text: |-
+      /SETHOST wibble.wobble
 
 special_notes: |-
   This command only changes the displayed hostname of the user. Their real hostname will remain intact and still will match against bans.
