--- a/docs/3/modules/silence.yml
+++ b/docs/3/modules/silence.yml
@@ -33,30 +33,23 @@ commands:
   syntax: '[(+|-)<mask> [<flags>]]'
   description: |-
     Allows users to add users to their `/SILENCE` list, remove users from their `/SILENCE` list, and list users on their `/SILENCE` list.
-  example: |-
-    Adds a `/SILENCE` entry which blocks all possible messages from users matching `*!*@example.com`:
-
-    ```plaintext
-    /SILENCE *!*@example.com
-    ```
-
-    Adds a `/SILENCE` entry which exempts all possible messages from users matching `*!*@exempt.example.com`:
-
-    ```plaintext
-    /SILENCE *!*@exempt.example.com x
-    ```
-
-    Removes a `/SILENCE` entry which blocked private `NOTICE`, `PRIVMSG`, and `TAGMSG` messages from users matching `*!*@example.com`:
-
-    ```plaintext
-    /SILENCE *!*@example.com NPT
-    ```
-
-    View all entries on the `/SILENCE` list:
-
-    ```plaintext
-    /SILENCE
-    ```
+  example:
+  - description: |-
+      Adds a `/SILENCE` entry which blocks all possible messages from users matching `*!*@example.com`
+    text: |-
+      /SILENCE *!*@example.com
+  - description: |-
+      Adds a `/SILENCE` entry which exempts all possible messages from users matching `*!*@exempt.example.com`
+    text: |-
+      /SILENCE *!*@exempt.example.com x
+  - description: |-
+      Removes a `/SILENCE` entry which blocked private `NOTICE`, `PRIVMSG`, and `TAGMSG` messages from users matching `*!*@example.com`
+    text: |-
+      /SILENCE *!*@example.com NPT
+  - description: |-
+      View all entries on the `/SILENCE` list
+    text: |-
+      /SILENCE
 
 command_details: |-
   The flags in the second parameter should be set to one of the following values:
