--- a/docs/3/modules/sslinfo.yml
+++ b/docs/3/modules/sslinfo.yml
@@ -91,18 +91,16 @@ commands:
   syntax: <target>
   description: |-
     Views the TLS (SSL) certificate information for &lt;target&gt;.
-  example: |-
-    Views the TLS (SSL) certificate information for Sadie:
-
-    ```plaintext
-    /SSLINFO Sadie
-    ```
-
-    [**New in v3.9.0!**](/3/change-log/#inspircd-390) Views the TLS (SSL) certificate information for users in #wibble:
-
-    ```plaintext
-    /SSLINFO #wibble
-    ```
+  example:
+  - description: |-
+      Views the TLS (SSL) certificate information for Sadie
+    text: |-
+      /SSLINFO Sadie
+  - added: 3.9.0
+  - description: |-
+      Views the TLS (SSL) certificate information for users in #wibble
+    text: |-
+      /SSLINFO #wibble
 
 special_notes: |-
   {! 3/modules/_ssl_table.md !}
