--- a/docs/3/modules/uninvite.yml
+++ b/docs/3/modules/uninvite.yml
@@ -9,9 +9,8 @@ commands:
   syntax: <nick> <channel>
   description: |-
     Withdraws the invite for &lt;nick&gt; to join &lt;channel&gt;
-  example: |-
-    Withdraws the invite for Adam to join #secret:
-
-    ```plaintext
-    /UNINVITE Adam #secret
-    ```
+  example:
+  - description: |-
+      Withdraws the invite for Adam to join #secret
+    text: |-
+      /UNINVITE Adam #secret
