--- a/docs/3/modules/vhost.yml
+++ b/docs/3/modules/vhost.yml
@@ -54,9 +54,8 @@ commands:
   syntax: <username> <password>
   description: |-
     Log into the account with the specified username and password.
-  example: |-
-    Logs into the account with the name Sadie and password fl00fyc4pyb4r4:
-
-    ```plaintext
-    /VHOST Sadie fl00fyc4pyb4r4
-    ```
+  example:
+  - description: |-
+      Logs into the account with the name Sadie and password fl00fyc4pyb4r4
+    text: |-
+      /VHOST Sadie fl00fyc4pyb4r4
