--- a/docs/3/modules/customtitle.yml
+++ b/docs/3/modules/customtitle.yml
@@ -68,9 +68,8 @@ commands:
   syntax: <username> <password>
   description: |-
     Log into the account with the specified username and password.
-  example: |-
-    Logs into the account with the name Sadie and password fl00fyc4pyb4r4:
-
-    ```plaintext
-    /TITLE Sadie fl00fyc4pyb4r4
-    ```
+  example:
+  - description: |-
+      Logs into the account with the name Sadie and password fl00fyc4pyb4r4
+    text: |-
+      /TITLE Sadie fl00fyc4pyb4r4
