--- a/docs/3/modules/cycle.yml
+++ b/docs/3/modules/cycle.yml
@@ -9,15 +9,12 @@ commands:
   syntax: <channel> [<reason>]
   description: |-
     Parts and rejoins the specified channel.
-  example: |-
-    Parts and rejoins the #example channel:
-
-    ```plaintext
-    /CYCLE #example
-    ```
-
-    Parts and rejoins the #example channel with "Be right back!" as the reason:
-
-    ```plaintext
-    /CYCLE #example :Be right back!
-    ```
+  example:
+  - description: |-
+      Parts and rejoins the #example channel
+    text: |-
+      /CYCLE #example
+  - description: |-
+      Parts and rejoins the #example channel with "Be right back!" as the reason
+    text: |-
+      /CYCLE #example :Be right back!
