--- a/docs/3/modules/lockserv.yml
+++ b/docs/3/modules/lockserv.yml
@@ -13,23 +13,21 @@ commands:
   syntax: '[<message>]'
   description: |-
     Disables access to the local server with an optional message.
-  example: |-
-    Stops the local server from accepting new connections with the message "Server is under maintenance. Come back later.":
-
-    ```plaintext
-    /LOCKSERV :Server is under maintenance. Come back later.
-    ```
+  example:
+  - description: |-
+      Stops the local server from accepting new connections with the message "Server is under maintenance. Come back later."
+    text: |-
+      /LOCKSERV :Server is under maintenance. Come back later
 - name: UNLOCKSERV
   param_count: 0
   syntax: null
   description: |-
     Enables access to the local server.
-  example: |-
-    Opens up the local server so it accepts new connections:
-
-    ```plaintext
-    /UNLOCKSERV
-    ```
+  example:
+  - description: |-
+      Opens up the local server so it accepts new connections
+    text: |-
+      /UNLOCKSERV
 
 special_notes: |-
   If you accidentally disconnect whilst a server is locked you can disable the lock by rehashing the server.
