--- a/docs/3/modules/password_hash.yml
+++ b/docs/3/modules/password_hash.yml
@@ -26,12 +26,11 @@ commands:
   syntax: <hash> <password>
   description: |-
     Hashes &lt;password&gt; using the &lt;hash&gt; algorithm.
-  example: |-
-    Hashes the password "hunter2" using the HMAC-SHA-256 algorithm:
-
-    ```plaintext
-    /MKPASSWD hmac-sha256 hunter2
-    ```
+  example:
+  - description: |-
+      Hashes the password "hunter2" using the HMAC-SHA-256 algorithm
+    text: |-
+      /MKPASSWD hmac-sha256 hunter2
 
 command_details: |-
   {! 3/modules/_hash_table.md !}
