--- a/docs/3/modules/sanick.yml
+++ b/docs/3/modules/sanick.yml
@@ -9,9 +9,8 @@ commands:
   syntax: <old-nick> <new-nick>
   description: |-
     Changes the nickname of &lt;old-nick&gt; to &lt;new-nick&gt;.
-  example: |-
-    Changes the nickname of Sadie to Sadie2:
-
-    ```plaintext
-    /SANICK Sadie Sadie2
-    ```
+  example:
+  - description: |-
+      Changes the nickname of Sadie to Sadie2
+    text: |-
+      /SANICK Sadie Sadie2
